feat: create separate methods for each step