@@ -7,6 +7,8 @@ import java.util.Locale;
 import java.util.stream.Collectors;
 
 public class ListModifier {
+    // I wasn't sure if I needed to output one list modified in 4 ways or 4 different lists
+    // I did it both ways
 
     public static List<String> modifyList(List<String> list) {
         return list.stream()
@@ -14,6 +16,30 @@ public class ListModifier {
                 .sorted(Comparator.comparing((a) -> !a.toLowerCase(Locale.ROOT).contains("e")))
                 .map((a) -> a.replaceAll("[aA]", "4"))
                 .filter((a) -> a.matches("[0-9]*"))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public static List<String> sortAlphabetically(List<String> list) {
+        return list.stream()
+                .sorted(String::compareToIgnoreCase)
+                .toList();
+    }
+
+    public static List<String> containsEFirst(List<String> list) {
+        return list.stream()
+                .sorted(Comparator.comparing((a) -> !a.toLowerCase(Locale.ROOT).contains("e")))
+                .toList();
+    }
+
+    public static List<String> replaceAby4(List<String> list) {
+        return list.stream()
+                .map((a) -> a.replaceAll("[aA]", "4"))
+                .toList();
+    }
+
+    public static List<String> getNumbersOnly(List<String> list) {
+        return list.stream()
+                .filter((a) -> a.matches("[0-9]*"))
+                .toList();
     }
 }
